infra/k8s/base/odoo.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo
spec:
  ports:
    - port: 8069
  selector:
    app: odoo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: odoo:17
          ports:
            - containerPort: 8069
