infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  namespace: odoo
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - odoo.esmos.mooo.com
      secretName: esmos-tls
  rules:
    - host: odoo.esmos.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8069
